stop wrapping my header tab text.

--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,7 @@ body .content {
 }
 
 .article-header-tab {
-    width: max(min-content, 400px);
+    width: min-content;
     min-width: 7em;
     margin-left: 10px;
     margin-top: 10px;
@@ -85,6 +85,7 @@ body .content {
     border: 2px solid #f4bd29;
     border-bottom: 0px;
     display: inline-block;
+    white-space: nowrap;
 }
 
 .article {
